--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <button>App store</button>
                     </div>
                 </div>
-                <div>
+                <div class="img-container">
                     <div class="big-img">
                         <img src="img/phone.png" alt="">
                     </div>
@@ -275,6 +275,29 @@
             
 
         </div>
+<!-- div-5 -->
+        <div class="container-5">
+            <div class="container-5-a">
+                <h2>About us</h2>
+                <div>
+                    Utilizamos cookies y herramientas similares que son necesarias para permitirte comprar, mejorar tus experiencias de compra y proporcionar nuestros servicios, según se detalla en nuestro Aviso de cookies. También utilizamos estas cookies para entender cómo utilizan los clientes nuestros servicios Utilizamos cookies y herramientas similares que son necesarias para permitirte comprar, mejorar tus experiencias de compra y proporcionar nuestros servicios, según se detalla en nuestro Aviso de cookies. También utilizamos estas cookies para entender cómo utilizan los clientes nuestros servicios <br><br>
+                    Utilizamos cookies y herramientas similares que son necesarias para permitirte comprar, mejorar tus experiencias de compra y proporcionar nuestros servicios, según se detalla en nuestro Aviso de cookies. También utilizamos estas cookies para entender cómo utilizan los clientes nuestros servicios Utilizamos cookies y herramientas similares que son necesarias para permitirte comprar, mejorar tus experiencias de compra y proporcionar nuestros servicios, según se detalla en nuestro Aviso de cookies. También utilizamos estas cookies para entender cómo utilizan los clientes nuestros servicios 
+
+                </div>
+
+            </div>
+            <div class="container-5-b">
+                <div class="img-container-5">
+                    <img src="img/about.jpg" alt="">
+                </div>
+                
+                <h3>Utilizamos cookies y herramientas similares que son necesarias para permitirte comprar</h3>
+                <button>find me on linkedin</button>
+
+            </div>
+
+        </div>
+
     </main>
     <footer>
 
