--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
         <div class="sfondo">
             <div class="container">
                 <div class="box-header-a">
+                    <img src="img/logo.png" alt="">
 
                 </div>
                 <div class="box-header-b">
+                    <img src="img/sliders-solid.svg" alt="">
+                    
 
                 </div>
+                <div class="box-header-ba">
+                    <a href="">planning</a>
+                    <a href="">planning</a>
+                    <a href="">planning</a>
+                    <a href="">planning</a>
+                    <button>Get started</button>
+
+                </div>
+
 
             </div>
 
@@ -300,6 +312,13 @@
 
     </main>
     <footer>
+        <div class="container-footer">
+            <div class="box-footer">
+                <div class="testo-footer1">Utilizamos cookies y herramientas similares que son necesarias para permitirte comprar, mejorar tus experiencias de compra y proporcionar nuestros servicios, según se detalla en nuestro Aviso de cookies. También utilizamos estas cookies para entender cómo utilizan los clientes nuestros servicios</div>
+                <div class="testo-footer2">Utilizamos cookies y <a href="">similares</a>  que son necesarias para permitirte comprar, mejorar tus experiencias de compra y proporcionar nuestros servicios, según se detalla en nuestro Aviso de cookies. También utilizamos estas cookies para entender cómo utilizan los clientes nuestros servicios</div>               
+            </div>
+
+        </div>
 
     </footer>
     
